tests/snapshots/e2e__callers@composite-annotations_manifest.snap
---
source: tests/e2e.rs
expression: manifest
---
callers  1 caller for .github/workflows/manifest-target.yml

CALLERS
kind                 location                detail
annotated-composite  .github/actions/notify  _action via triggers
