tests/snapshots/e2e__callers@orphans-job-env-input.snap
---
source: tests/e2e.rs
expression: out
---
callers  1 caller for .github/workflows/callee.yml

CALLERS
kind      location                      detail
job-call  .github/workflows/caller.yml  call::_jobcall
