tests/snapshots/e2e__callers@secrets-explicit-chain.snap
---
source: tests/e2e.rs
expression: out
---
callers  1 caller for .github/workflows/leaf.yml

CALLERS
kind      location                   detail
job-call  .github/workflows/mid.yml  forward::_jobcall
