tests/snapshots/e2e__check_permissions@actionlint-findings.snap
---
source: tests/e2e.rs
expression: out
---
permissions  1 finding  (1 medium)

  !  medium  implicit-repo-default
  .github/workflows/ci.yaml

    entry-point workflow `.github/workflows/ci.yaml` declares no `permissions:` and jobs [build, deploy] inherit the repository default
